--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 fastapi==0.124.4
 uvicorn==0.38.0
-gunicorn==21.2.0  <-- AGREGADO
+gunicorn==21.2.0
 SQLAlchemy==2.0.45
 pydantic==2.12.5
 passlib==1.7.4
