--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-fastapi==0.124.4
-uvicorn==0.38.0
-gunicorn==21.2.0
-SQLAlchemy==2.0.45
-pydantic==2.12.5
-passlib==1.7.4
-bcrypt==5.0.0
+fastapi==0.115.6
+uvicorn==0.34.0
+gunicorn==23.0.0
+SQLAlchemy==2.0.36
+pydantic==2.10.4
+passlib[bcrypt]==1.7.4
+bcrypt==4.2.1
 python-multipart==0.0.20
 python-jose[cryptography]==3.3.0
